--- a/app/globals.css
+++ b/app/globals.css
@@ -43,12 +43,14 @@ body {
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-accent: 231 44% 9%;
+      --sidebar-accent-foreground: 0 0% 100%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --primary-gradient: linear-gradient(90deg, #0A3F4C, #0C6980);
   }
   .dark {
+    --primary-gradient: linear-gradient(90deg, #0A3F4C, #0C6980);
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
@@ -77,8 +79,8 @@ body {
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-accent: 231 44% 9%;
+      --sidebar-accent-foreground: 0 0% 100%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
@@ -90,5 +92,10 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+@layer utilities {
+  .bg-sidebar-gradient {
+    background: linear-gradient(90deg, #0A3F4C, #0C6980);
   }
 }
